--- a/code/css/web_tech.css
+++ b/code/css/web_tech.css
@@ -28,7 +28,7 @@ body{ text-align: center;}
 /*    left:       40px; */
     width:      1000px;
     height:     85px;
-    border-style: none none dashed none;
+    border-style: none none none none;
     border-width: thin;
 }
 
